# marker-based-heritability

./: README.rst
mh2/: .gitignore  README.rst  pyproject.toml
mh2/data/mice/: mice_traits.csv
mh2/examples/: README.rst  Untitled.ipynb  examples.rst
mh2/examples/output/: last_run.txt
mh2/examples/output/mh2_run_2026-03-03_09-42-53/: heritability_table.csv  heritability_table_F_0.5.csv  heterozygosity_table.csv  input_traits_raw.csv  phenotypic_similarity_table.csv  relatedness_table.csv  run_metadata.txt
mh2/examples/output/mh2_run_2026-03-03_11-25-47/: heritability_table.csv  heterozygosity_table.csv  input_markers_raw.csv  input_traits_raw.csv  run_metadata.txt
mh2/examples/output/mh2_run_2026-03-03_11-26-33/: heritability_table.csv  heterozygosity_table.csv  (+1 more)
mh2/output/: last_run.txt
mh2/output/mh2_run_2026-03-02_14-19-29/: heritability_table_F_0.74.csv  heterozygosity_table.csv
mh2/output/mh2_run_2026-03-02_14-22-16/: heritability_table_F_0.74.csv
mh2/output/mh2_run_2026-03-02_14-26-05/: heritability_table_F_0.1.csv  heritability_table_F_0.74.csv  heritability_table_F_0_1.csv
mh2/output/mh2_run_2026-03-02_14-35-51/: heritability_table.csv  run_metadata.csv
mh2/output/mh2_run_2026-03-02_14-44-36/: heritability_table.csv
mh2/output/mh2_run_2026-03-02_14-47-24/: heritability_table_F_0.2.csv  heritability_table_F_0.6.csv  heritability_table_F_0.74.csv  run_metadata.txt
mh2/src/mh2/: __init__.py  constants.py  heritability.py  io.py  markers.py  microsatellites.py  phenotypes.py  pipeline.py  pipeline_old.py  snp_utils.py  snps.py  state.py
(+186 files in other folders)
